Adaugare multidecoder